syntax = "proto3";

option go_package = "api/v1";
// import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package task_controller.proto.v1;

// The task service definition.
service TaskService {
  // Create a new task.
  rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse);
  // Read a task by ID.
  rpc GetTask(GetTaskRequest) returns (GetTaskResponse);
  // Update an existing task.
  rpc UpdateTask(UpdateTaskRequest) returns (UpdateTaskResponse);
  // Delete a task by ID.
  rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse);
  // List all tasks.
  rpc ListTask(ListTaskRequest) returns (ListTaskResponse);
}

message Task {
  string id = 1;
  string title = 2;
  string description = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  google.protobuf.Timestamp limited_at = 6;
  bool is_end = 7;
}

// The request message for creating a new task.
message CreateTaskRequest {
  string title = 1;
  string description = 2;
}

message CreateTaskResponse {
  string id = 1;
}
message GetTaskRequest {
  string id = 1;
}
message GetTaskResponse {
  Task task = 1;
}
message ListTaskRequest {
  int32 limit = 1;
  int32 offset = 2;
}
message ListTaskResponse {
  repeated Task tasks = 1;
}

message UpdateTaskRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  google.protobuf.Timestamp limited_at = 4;
  bool is_end = 5;
}

message UpdateTaskResponse {
  Task task = 1;
}

message DeleteTaskRequest {
  string id = 1;
}

// The response message for delete operation.
message DeleteTaskResponse {
  bool success = 1;
}